Added Flask Server

--- a/DiseasePrediction.ipynb
+++ b/DiseasePrediction.ipynb
@@ -2321,8 +2321,8 @@
    ],
    "source": [
     "unique_symptoms = set()\n",
-    "for i, column in enumerate(df.iloc[:, 1:]):\n",
-    "  unique_symptoms |= set(df[column])\n",
+    "for i, column in enumerate(symptoms_df.iloc[:, 0:-1]):\n",
+    "  unique_symptoms |= set(symptoms_df[column])\n",
     "\n",
     "unique_symptoms_lst = list(unique_symptoms)\n",
     "unique_symptoms_lst_cleaned = [i for i in unique_symptoms_lst if isinstance(i, str)]\n",
