--- a/DiseasePrediction.ipynb
+++ b/DiseasePrediction.ipynb
@@ -482,12 +482,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\kianm\\AppData\\Local\\Temp\\ipykernel_17264\\1528610647.py:7: SettingWithCopyWarning: \n",
+      "C:\\Users\\kianm\\AppData\\Local\\Temp\\ipykernel_2424\\1528610647.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df[\"All_Symptoms\"][i] = values[1:values.index(0)]\n",
-      "C:\\Users\\kianm\\AppData\\Local\\Temp\\ipykernel_17264\\1528610647.py:7: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '['itching', 'skin rash', 'nodal skin eruptions', 'dischromic  patches', nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan]' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "C:\\Users\\kianm\\AppData\\Local\\Temp\\ipykernel_2424\\1528610647.py:7: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '['itching', 'skin rash', 'nodal skin eruptions', 'dischromic  patches', nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan]' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  df[\"All_Symptoms\"][i] = values[1:values.index(0)]\n"
      ]
     },
@@ -1218,7 +1218,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\kianm\\AppData\\Local\\Temp\\ipykernel_17264\\1716308673.py:6: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "C:\\Users\\kianm\\AppData\\Local\\Temp\\ipykernel_2424\\1716308673.py:6: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  symptoms['Diesease'] = df['Disease']\n"
      ]
     },
@@ -2832,13 +2832,242 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 :  itching\n",
+      "2 :  skin rash\n",
+      "3 :  nodal skin eruptions\n",
+      "4 :  dischromic  patches\n",
+      "5 :  continuous sneezing\n",
+      "6 :  shivering\n",
+      "7 :  chills\n",
+      "8 :  watering from eyes\n",
+      "9 :  stomach pain\n",
+      "10 :  acidity\n",
+      "11 :  ulcers on tongue\n",
+      "12 :  vomiting\n",
+      "13 :  cough\n",
+      "14 :  chest pain\n",
+      "15 :  yellowish skin\n",
+      "16 :  nausea\n",
+      "17 :  loss of appetite\n",
+      "18 :  abdominal pain\n",
+      "19 :  yellowing of eyes\n",
+      "20 :  burning micturition\n",
+      "21 :  spotting  urination\n",
+      "22 :  passage of gases\n",
+      "23 :  internal itching\n",
+      "24 :  indigestion\n",
+      "25 :  muscle wasting\n",
+      "26 :  patches in throat\n",
+      "27 :  high fever\n",
+      "28 :  extra marital contacts\n",
+      "29 :  fatigue\n",
+      "30 :  weight loss\n",
+      "31 :  restlessness\n",
+      "32 :  lethargy\n",
+      "33 :  irregular sugar level\n",
+      "34 :  blurred and distorted vision\n",
+      "35 :  obesity\n",
+      "36 :  excessive hunger\n",
+      "37 :  increased appetite\n",
+      "38 :  polyuria\n",
+      "39 :  sunken eyes\n",
+      "40 :  dehydration\n",
+      "41 :  diarrhoea\n",
+      "42 :  breathlessness\n",
+      "43 :  family history\n",
+      "44 :  mucoid sputum\n",
+      "45 :  headache\n",
+      "46 :  dizziness\n",
+      "47 :  loss of balance\n",
+      "48 :  lack of concentration\n",
+      "49 :  stiff neck\n",
+      "50 :  depression\n",
+      "51 :  irritability\n",
+      "52 :  visual disturbances\n",
+      "53 :  back pain\n",
+      "54 :  weakness in limbs\n",
+      "55 :  neck pain\n",
+      "56 :  weakness of one body side\n",
+      "57 :  altered sensorium\n",
+      "58 :  dark urine\n",
+      "59 :  sweating\n",
+      "60 :  muscle pain\n",
+      "61 :  mild fever\n",
+      "62 :  swelled lymph nodes\n",
+      "63 :  malaise\n",
+      "64 :  red spots over body\n",
+      "65 :  joint pain\n",
+      "66 :  pain behind the eyes\n",
+      "67 :  constipation\n",
+      "68 :  toxic look (typhos)\n",
+      "69 :  belly pain\n",
+      "70 :  yellow urine\n",
+      "71 :  receiving blood transfusion\n",
+      "72 :  receiving unsterile injections\n",
+      "73 :  coma\n",
+      "74 :  stomach bleeding\n",
+      "75 :  acute liver failure\n",
+      "76 :  swelling of stomach\n",
+      "77 :  distention of abdomen\n",
+      "78 :  history of alcohol consumption\n",
+      "79 :  fluid overload\n",
+      "80 :  phlegm\n",
+      "81 :  blood in sputum\n",
+      "82 :  throat irritation\n",
+      "83 :  redness of eyes\n",
+      "84 :  sinus pressure\n",
+      "85 :  runny nose\n",
+      "86 :  congestion\n",
+      "87 :  loss of smell\n",
+      "88 :  fast heart rate\n",
+      "89 :  rusty sputum\n",
+      "90 :  pain during bowel movements\n",
+      "91 :  pain in anal region\n",
+      "92 :  bloody stool\n",
+      "93 :  irritation in anus\n",
+      "94 :  cramps\n",
+      "95 :  bruising\n",
+      "96 :  swollen legs\n",
+      "97 :  swollen blood vessels\n",
+      "98 :  prominent veins on calf\n",
+      "99 :  weight gain\n",
+      "100 :  cold hands and feets\n",
+      "101 :  mood swings\n",
+      "102 :  puffy face and eyes\n",
+      "103 :  enlarged thyroid\n",
+      "104 :  brittle nails\n",
+      "105 :  swollen extremeties\n",
+      "106 :  abnormal menstruation\n",
+      "107 :  muscle weakness\n",
+      "108 :  anxiety\n",
+      "109 :  slurred speech\n",
+      "110 :  palpitations\n",
+      "111 :  drying and tingling lips\n",
+      "112 :  knee pain\n",
+      "113 :  hip joint pain\n",
+      "114 :  swelling joints\n",
+      "115 :  painful walking\n",
+      "116 :  movement stiffness\n",
+      "117 :  spinning movements\n",
+      "118 :  unsteadiness\n",
+      "119 :  pus filled pimples\n",
+      "120 :  blackheads\n",
+      "121 :  scurring\n",
+      "122 :  bladder discomfort\n",
+      "123 :  foul smell of urine\n",
+      "124 :  continuous feel of urine\n",
+      "125 :  skin peeling\n",
+      "126 :  silver like dusting\n",
+      "127 :  small dents in nails\n",
+      "128 :  inflammatory nails\n",
+      "129 :  blister\n",
+      "130 :  red sore around nose\n",
+      "131 :  yellow crust ooze\n"
+     ]
+    }
+   ],
+   "source": [
+    "symptoms_list = [i for i in symptoms_df.columns[:-1]]\n",
+    "for i in range(len(symptoms_list)):\n",
+    "    print(i+1, \": \", symptoms_list[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 'itching', 1: 'skin rash', 2: 'nodal skin eruptions', 3: 'dischromic  patches', 4: 'continuous sneezing', 5: 'shivering', 6: 'chills', 7: 'watering from eyes', 8: 'stomach pain', 9: 'acidity', 10: 'ulcers on tongue', 11: 'vomiting', 12: 'cough', 13: 'chest pain', 14: 'yellowish skin', 15: 'nausea', 16: 'loss of appetite', 17: 'abdominal pain', 18: 'yellowing of eyes', 19: 'burning micturition', 20: 'spotting  urination', 21: 'passage of gases', 22: 'internal itching', 23: 'indigestion', 24: 'muscle wasting', 25: 'patches in throat', 26: 'high fever', 27: 'extra marital contacts', 28: 'fatigue', 29: 'weight loss', 30: 'restlessness', 31: 'lethargy', 32: 'irregular sugar level', 33: 'blurred and distorted vision', 34: 'obesity', 35: 'excessive hunger', 36: 'increased appetite', 37: 'polyuria', 38: 'sunken eyes', 39: 'dehydration', 40: 'diarrhoea', 41: 'breathlessness', 42: 'family history', 43: 'mucoid sputum', 44: 'headache', 45: 'dizziness', 46: 'loss of balance', 47: 'lack of concentration', 48: 'stiff neck', 49: 'depression', 50: 'irritability', 51: 'visual disturbances', 52: 'back pain', 53: 'weakness in limbs', 54: 'neck pain', 55: 'weakness of one body side', 56: 'altered sensorium', 57: 'dark urine', 58: 'sweating', 59: 'muscle pain', 60: 'mild fever', 61: 'swelled lymph nodes', 62: 'malaise', 63: 'red spots over body', 64: 'joint pain', 65: 'pain behind the eyes', 66: 'constipation', 67: 'toxic look (typhos)', 68: 'belly pain', 69: 'yellow urine', 70: 'receiving blood transfusion', 71: 'receiving unsterile injections', 72: 'coma', 73: 'stomach bleeding', 74: 'acute liver failure', 75: 'swelling of stomach', 76: 'distention of abdomen', 77: 'history of alcohol consumption', 78: 'fluid overload', 79: 'phlegm', 80: 'blood in sputum', 81: 'throat irritation', 82: 'redness of eyes', 83: 'sinus pressure', 84: 'runny nose', 85: 'congestion', 86: 'loss of smell', 87: 'fast heart rate', 88: 'rusty sputum', 89: 'pain during bowel movements', 90: 'pain in anal region', 91: 'bloody stool', 92: 'irritation in anus', 93: 'cramps', 94: 'bruising', 95: 'swollen legs', 96: 'swollen blood vessels', 97: 'prominent veins on calf', 98: 'weight gain', 99: 'cold hands and feets', 100: 'mood swings', 101: 'puffy face and eyes', 102: 'enlarged thyroid', 103: 'brittle nails', 104: 'swollen extremeties', 105: 'abnormal menstruation', 106: 'muscle weakness', 107: 'anxiety', 108: 'slurred speech', 109: 'palpitations', 110: 'drying and tingling lips', 111: 'knee pain', 112: 'hip joint pain', 113: 'swelling joints', 114: 'painful walking', 115: 'movement stiffness', 116: 'spinning movements', 117: 'unsteadiness', 118: 'pus filled pimples', 119: 'blackheads', 120: 'scurring', 121: 'bladder discomfort', 122: 'foul smell of urine', 123: 'continuous feel of urine', 124: 'skin peeling', 125: 'silver like dusting', 126: 'small dents in nails', 127: 'inflammatory nails', 128: 'blister', 129: 'red sore around nose', 130: 'yellow crust ooze'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "symptoms_dict = {index:value for index, value in enumerate(symptoms_list)}\n",
+    "print(symptoms_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "131\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_results = [0 for i in range(131)]\n",
+    "print(list_results)\n",
+    "print(len(list_results))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 4, 129, 130]\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_list = [\"dischromic  patches\", \"continuous sneezing\",  \"red sore around nose\", \"yellow crust ooze\"]\n",
+    "symptomsKeys = [key for key, value in symptoms_dict.items() if value in test_list]\n",
+    "print(symptomsKeys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "symptomsArray = [0 for i in range(131)]\n",
+    "for i in range(len(symptomsKeys)):\n",
+    "    pos = symptomsKeys[i]\n",
+    "    symptomsArray[pos] = 1\n",
+    "\n",
+    "print(symptomsArray)\n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## TODO:\n",
-    "1. To decide how to load the features into the model for prediction\n",
+    "1. ~~To decide how to load the features into the model for prediction~~ --DONE!\n",
     "2. Group symptoms to narrow down symptoms for users to choose\n",
-    "3. To load model to a flask server\n",
+    "3. ~~To load model to a flask server~~ -- DONE!\n",
     "4. To upload model to AWS??"
    ]
   },
